Fixed header layout on smaller screens (#1581) (#1582)

--- a/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-panel.less
+++ b/src/main/resources/assets/admin/common/styles/api/app/wizard/wizard-panel.less
@@ -81,11 +81,4 @@
       }
     }
   }
-
-  &._0-240, &._240-360, &._360-540 {
-    .thumbnail-uploader-el,
-    .@{_COMMON_PREFIX}form-icon {
-      margin: 5px 10px 0 10px;
-    }
-  }
 }
